# xpi-blocks

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Dockerfile  README.md  ROADMAP.md  docker-compose.sim.yml  docker-compose.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ros2-ci.yml
docs/: AUDIO_AI_STRATEGY.md  AUDIO_HARDWARE_GUIDE.md  BLOCKS_INDEX.md  CAPABILITIES.md  CV_VLM_IDEAS.md  DEPLOYMENT_DOCKER.md  FUTURE_INPUT_IDEAS.md  INPUT_DEVICES_PLAN.md  LIDAR_STRATEGY.md  LLM_VLM_SCENARIOS.md  MANUAL_INSTALLATION.md  MCP_INTEGRATION.md  MCP_ROADMAP.md  MESHTASTIC_HARDWARE_GUIDE.md  MESHTASTIC_INTEGRATION.md  NEXT_KEY_TASKS.md  SIMULATION_DESKTOP.md  STATUS_INDICATION_SYSTEM.md  SWARM_CONSENSUS.md  SWARM_POWER_CALCULATION.md  TESTING.md
projects/hexapod_master/: README.md
projects/smart_motor/: README.md
src/xpi_inputs/: package.xml  setup.cfg  setup.py
src/xpi_inputs/config/: mapper_example.yaml  mapper_generic_sbus.yaml  mapper_mouse_pantilt.yaml  mapper_ps4.yaml  mapper_radiomaster_crsf.yaml  mapper_web.yaml  telegram_menu.yaml
src/xpi_inputs/launch/: crsf.launch.py  gesture.launch.py  joystick.launch.py  keyboard.launch.py  mapper.launch.py  mouse.launch.py  ppm.launch.py  rotary_encoder.launch.py  sbus.launch.py  telegram.launch.py  web_joystick.launch.py
src/xpi_inputs/web_static/: index.html
src/xpi_inputs/xpi_inputs/: crsf_receiver_node.py  gesture_control_node.py  joy_mapper_node.py  keyboard_to_joy_node.py  mouse_node.py  ppm_receiver_node.py  rc_interpreter_node.py  rotary_encoder_node.py  sbus_receiver_node.py  telegram_bot_node.py  web_joystick_node.py
src/xpi_llm/: package.xml  setup.cfg  setup.py
src/xpi_llm/launch/: sonar_pattern_analyzer.launch.py  sonar_trend_analyzer.launch.py  tool_calling.launch.py
src/xpi_llm/xpi_llm/: audio_analyzer_node.py  llm_clients.py  mcp_agent_node.py  sonar_pattern_analyzer_node.py  sonar_trend_analyzer_node.py  tool_calling_node.py  vlm_observer_node.py
xpi-blocks/: requirements.txt
(+403 files in other folders)
