<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xpi_inputs</name>
  <version>0.1.0</version>
  <description>Input device blocks for XPI (Joysticks, RC, Keyboard)</description>
  <maintainer email="user@example.com">XPI Maintainer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_linux</exec_depend> # For Linux-specific joy node
  <exec_depend>python3-pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
